@@ -1,73 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.example</groupId>
-    <artifactId>ignite-server</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <ignite.version>2.18.0</ignite.version>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.ignite</groupId>
-            <artifactId>ignite-core</artifactId>
-            <version>${ignite.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ignite</groupId>
-            <artifactId>ignite-spring</artifactId>
-            <version>${ignite.version}</version>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
-				<configuration>
-					<!-- Spawns a new java JVM process -->
-                    <executable>java</executable>
-					<!--<mainClass>com.example.App</mainClass>-->
-                    <arguments>
-                        <argument>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</argument>
-                        <argument>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</argument>
-                        <argument>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.io=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.nio=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.math=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.sql/java.sql=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.time=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.time=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.base/java.text=ALL-UNNAMED</argument>
-                        <argument>--add-opens=java.management/sun.management=ALL-UNNAMED</argument>
-						<argument>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</argument>
-
-						<!-- 2. Tell JVM to use the project dependencies classpath -->
-                        <argument>-classpath</argument>
-						<classpath />
-
-						<!-- 3. Tell JVM which main class to run -->
-                        <argument>com.example.App</argument>
-                    </arguments>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<project>
+  <properties>
+    <ignite.version>2.18.0</ignite.version>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.ignite</groupId>
+      <artifactId>ignite-core</artifactId>
+      <version>${ignite.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.ignite</groupId>
+      <artifactId>ignite-spring</artifactId>
+      <version>${ignite.version}</version>
+    </dependency>
+  </dependencies>
 </project>
